--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -132,9 +132,10 @@
   </a>
 
   <!-- 🔹 Tombol Home menuju index.html -->
-  <a href="index.html">
+  <a href="../index.html">
     <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home" class="tombol-home">
   </a>
 
 </body>
 </html>
+
