--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -69,11 +69,11 @@
       opacity: 1;
     }
 
-    /* ====== TOMBOL HOME (KANAN BAWAH) ====== */
+    /* ====== TOMBOL HOME (KIRI BAWAH) ====== */
     .tombol-home {
       position: fixed;
       bottom: 20px;
-     left: 20px;
+      left: 20px;
       width: 80px;
       height: auto;
       z-index: 20;
@@ -97,7 +97,7 @@
       .tombol-home {
         width: 70px;
         bottom: 15px;
-        right: 15px;
+        left: 15px;
       }
     }
 
@@ -131,11 +131,10 @@
     <img src="https://i.imgur.com/XYTajyI.png" alt="Tombol Menuju Materi" class="tombol-gambar">
   </a>
 
-  <!-- 🔹 Tombol Home menuju index.html -->
+  <!-- 🔹 Tombol Home menuju index.html di folder utama -->
   <a href="../index.html">
     <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home" class="tombol-home">
   </a>
 
 </body>
 </html>
-
