--- a/ekstra-komputer/soal-pengertian.html
+++ b/ekstra-komputer/soal-pengertian.html
@@ -162,7 +162,7 @@
     <div id="quiz" style="display:none;"></div>
   </div>
 
-  <a href="perangkat-keras.html" class="tombol-home" title="Kembali ke Halaman Utama">
+  <a href="perangkat.html" class="tombol-home" title="Kembali">
     <img src="https://i.imgur.com/pjkmRdR.png" alt="Home">
   </a>
 
@@ -308,3 +308,4 @@
   </script>
 </body>
 </html>
+
