--- a/ekstra-komputer/soal-pengertian.html
+++ b/ekstra-komputer/soal-pengertian.html
@@ -283,7 +283,7 @@
 
     // 🔹 Fungsi tombol selesai
     function selesaiKuis(){
-      window.location.href = "perangkat-keras.html"; // arahkan ke halaman utama
+      window.location.href = "perangkat.html"; // arahkan ke halaman utama
     }
 
     function kirimNilai(nilai){
@@ -308,4 +308,5 @@
   </script>
 </body>
 </html>
+
 
