--- a/ekstra-komputer/materi.html
+++ b/ekstra-komputer/materi.html
@@ -161,7 +161,7 @@
     </a>
 
     <!-- 🖱️ Tombol 2: Perangkat Lunak Pengolah Kata -->
-    <a href="perangkat-lunak-pengolah-kata.html">
+    <a href=#"perangkat-lunak-pengolah-kata.html"#>
       <img src="https://i.imgur.com/W9dsGDG.png" alt="Perangkat Lunak Pengolah Kata" class="tombol">
     </a>
 
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
