--- a/ekstra-komputer/materi.html
+++ b/ekstra-komputer/materi.html
@@ -166,7 +166,7 @@
     </a>
 
     <!-- 🖱️ Tombol 3: Menggunakan Perangkat Lunak -->
-    <a href="menggunakan-perangkat-lunak.html">
+    <a href="materi/halaman-materi.html">
       <img src="https://i.imgur.com/ipVy8cM.png" alt="Menggunakan Perangkat Lunak" class="tombol">
     </a>
   </div>
@@ -178,4 +178,5 @@
 
 </body>
 </html>
+
 
