--- a/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -238,8 +238,8 @@
   </div>
 
   <script>
-    function goHome() { window.location.href = "daftar-isi.html"; }
-    function goBack() { window.location.href = "materi.html"; }
+    function goHome() { window.location.href = "../daftar-isi.html"; }
+    function goBack() { window.location.href = "../materi.html"; }
 
     // Fungsi geser elemen (bisa mouse & sentuh)
     function makeDraggable(el) {
@@ -286,3 +286,4 @@
   </script>
 </body>
 </html>
+
