--- a/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -239,7 +239,7 @@
 
   <script>
     function goHome() { window.location.href = "../daftar-isi.html"; }
-    function goBack() { window.location.href = "../materi.html"; }
+    function goBack() { window.location.href = "halaman-materi.html"; }
 
     // Fungsi geser elemen (bisa mouse & sentuh)
     function makeDraggable(el) {
@@ -286,4 +286,5 @@
   </script>
 </body>
 </html>
+
 
