--- a/ekstra-komputer/materi/halaman-materi.html
+++ b/ekstra-komputer/materi/halaman-materi.html
@@ -167,12 +167,12 @@
   </footer>
 
   <!-- Tombol Home -->
-  <a href="daftar-isi.html" class="floating-btn home-btn" id="homeBtn">
+  <a href="../daftar-isi.html" class="floating-btn home-btn" id="homeBtn">
     <img src="https://i.imgur.com/Nc3RsIH.png" alt="Home" class="btn-icon">
   </a>
 
   <!-- Tombol Back -->
-  <a href="materi.html" class="floating-btn back-btn" id="backBtn">
+  <a href="../materi.html" class="floating-btn back-btn" id="backBtn">
     <img src="https://i.imgur.com/QEJbOve.png" alt="Back" class="btn-icon">
   </a>
 
@@ -240,4 +240,5 @@
 
 </body>
 </html>
+
 
