--- a/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -63,6 +63,29 @@
     li { margin-bottom: 6px; }
     p { color: #374151; }
 
+    /* Tombol Evaluasi */
+    .evaluasi-btn {
+      display: block;
+      background: linear-gradient(135deg, #0b76ef, #1e90ff);
+      color: white;
+      text-align: center;
+      font-weight: 600;
+      font-size: 18px;
+      padding: 14px 24px;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(11, 118, 239, 0.3);
+      text-decoration: none;
+      width: fit-content;
+      margin: 30px auto 10px auto;
+      transition: all 0.3s ease;
+    }
+
+    .evaluasi-btn:hover {
+      background: linear-gradient(135deg, #1e90ff, #0b76ef);
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(11, 118, 239, 0.4);
+    }
+
     /* Gambar bisa digeser */
     .floating-left {
       position: fixed;
@@ -117,7 +140,6 @@
       filter: drop-shadow(0 6px 14px rgba(11, 76, 150, 0.3));
     }
 
-    /* Hover (desktop) */
     .float-btn:hover {
       transform: translateY(-4px) scale(1.05);
     }
@@ -220,6 +242,9 @@
       <p>Menghidupkan dan mematikan komputer harus dilakukan dengan urutan yang benar agar komputer tetap awet dan data aman.</p>
       <p>Sikap hati-hati dan tertib adalah kunci utama saat menggunakan perangkat teknologi.</p>
     </div>
+
+    <!-- 🔘 Tombol Evaluasi -->
+    <a href="evaluasi.html" class="evaluasi-btn">🧩Evaluasi</a>
   </main>
 
   <!-- 🧒 Gambar anak bisa digeser -->
@@ -238,8 +263,8 @@
   </div>
 
   <script>
-    function goHome() { window.location.href = "../daftar-isi.html"; }
-    function goBack() { window.location.href = "halaman-materi.html"; }
+    function goHome() { window.location.href = "daftar-isi.html"; }
+    function goBack() { window.location.href = "materi.html"; }
 
     // Fungsi geser elemen (bisa mouse & sentuh)
     function makeDraggable(el) {
@@ -286,5 +311,3 @@
   </script>
 </body>
 </html>
-
-
