--- a/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -244,7 +244,7 @@
     </div>
 
     <!-- 🔘 Tombol Evaluasi -->
-    <a href="evaluasi.html" class="evaluasi-btn">🧩Evaluasi</a>
+    <a href="Soal-Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html" class="evaluasi-btn">🧩Evaluasi</a>
   </main>
 
   <!-- 🧒 Gambar anak bisa digeser -->
@@ -311,4 +311,5 @@
   </script>
 </body>
 </html>
+
 
