--- a/ekstra-komputer/materi/Soal-Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Soal-Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -157,7 +157,7 @@
     <div id="quiz" style="display:none;"></div>
   </div>
 
-  <a href="materi.html" class="tombol-home" title="Kembali">
+  <a href="Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html" class="tombol-home" title="Kembali">
     <img src="https://i.imgur.com/pjkmRdR.png" alt="Home">
   </a>
 
@@ -297,3 +297,4 @@
   </script>
 </body>
 </html>
+
