--- a/ekstra-komputer/materi/halaman-materi.html
+++ b/ekstra-komputer/materi/halaman-materi.html
@@ -157,7 +157,7 @@
 
     <a href="evaluasi.html" class="card">
       <div class="icon">🧩</div>
-      <h2>Kartu Evaluasi</h2>
+      <h2>Evaluasi</h2>
       <p>Uji pemahamanmu dengan latihan dan kuis dari setiap materi.</p>
     </a>
   </div>
@@ -240,5 +240,6 @@
 
 </body>
 </html>
+
 
 
