--- a/ekstra-komputer/materi/membuat_folder.html
+++ b/ekstra-komputer/materi/membuat_folder.html
@@ -1,4 +1,3 @@
-evaluasi menuju ke soal-folder.html
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -263,7 +262,7 @@ evaluasi menuju ke soal-folder.html
 
   <script>
     function goHome() { window.location.href = "../daftar-isi.html"; }
-    function goBack() { window.location.href = "materi.html"; }
+    function goBack() { window.location.href = "halaman-materi.html"; }
 
     function makeDraggable(el) {
       let pos = { top: 0, left: 0, x: 0, y: 0 };
@@ -308,3 +307,4 @@ evaluasi menuju ke soal-folder.html
   </script>
 </body>
 </html>
+
