--- a/ekstra-komputer/materi/soal-membuat_folder.html
+++ b/ekstra-komputer/materi/soal-membuat_folder.html
@@ -157,7 +157,7 @@
     <div id="quiz" style="display:none;"></div>
   </div>
 
-  <a href="materi.html" class="tombol-home" title="Kembali">
+  <a href="halaman-materi.html" class="tombol-home" title="Kembali">
     <img src="https://i.imgur.com/pjkmRdR.png" alt="Home">
   </a>
 
@@ -251,3 +251,4 @@
   </script>
 </body>
 </html>
+
