--- a/ekstra-komputer/materi/membuat_folder.html
+++ b/ekstra-komputer/materi/membuat_folder.html
@@ -59,6 +59,14 @@
       box-shadow: 0 4px 14px rgba(11, 118, 239, 0.1);
     }
 
+    .illustration {
+      display: block;
+      margin: 10px auto 20px auto;
+      max-width: 85%;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
     ul, ol { margin-left: 20px; }
     li { margin-bottom: 6px; }
     p { color: #374151; }
@@ -199,8 +207,13 @@
       <p><b>🔹 Langkah 1: Buka File Explorer</b></p>
       <ul>
         <li>Klik ikon 📁 File Explorer di taskbar (biasanya berbentuk gambar folder kuning).</li>
+      </ul>
+      <img src="https://i.imgur.com/ZgXY04q.png" alt="Ikon folder kuning di taskbar" class="illustration">
+
+      <ul>
         <li>Atau tekan tombol Windows + E di keyboard.</li>
       </ul>
+      <img src="https://i.imgur.com/bwpEwmv.png" alt="Tombol Windows + E di keyboard" class="illustration">
 
       <p><b>🔹 Langkah 2: Pilih Lokasi Folder</b></p>
       <p>Tentukan tempat untuk membuat folder baru, misalnya di Documents, Desktop, atau Local Disk (C:) / (D:).</p>
@@ -208,6 +221,9 @@
       <p><b>🔹 Langkah 3: Buat Folder Baru</b></p>
       <ol>
         <li>Klik kanan pada area kosong → pilih <b>New → Folder</b>.</li>
+      </ol>
+      <img src="https://i.imgur.com/qrB7hRj.png" alt="Klik kanan → New → Folder" class="illustration">
+      <ol start="2">
         <li>Atau tekan <b>Ctrl + Shift + N</b> di keyboard.</li>
       </ol>
 
@@ -307,4 +323,3 @@
   </script>
 </body>
 </html>
-
